# GBA_Wordle

./: .clangd  CMakeLists.txt  Makefile  README.md  backup.sav
asm/: answerlist.s  answers.s  decompressed_data_buffers.s  util_funcs.s  wordle_letters.s  wordlist.s  words.s
include/: answerlist.h  answers.h  gba_def.h  gba_funcs.h  gba_types.h  gba_util_macros.h  input.h  mode3_io.h  rng.h  save_interface.h  subpixel.h  wordle_letters.h  wordlist.h  words.h
src/: answerlist.c  input.c  lfsr_rand.c  main.c  menu.c  object_funcs.c  save_system.c  subpixel.c  txt_io.c  wordlist.c  words.c
